2011-01-11  John Bradshaw <john@johnbradshaw.org>

	* userpasswd.1: Fix a typo.

2010-09-14  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.106.1.
	* NEWS: Update.

2010-08-26  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.106.
	* NEWS: Update.

2010-06-14  Miloslav Trmač  <mitr@redhat.com>

	* consolehelper.c (main)
	* userhelper-wrap.c (userhelper_run)
	* userhelper.c (converse_console, wrap): Use g_malloc*_n ().

2010-06-12  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Define PACKAGE_BUREPORT and PACKAGE_URL.

	* autogen.sh: Run aclocal with -Wall.

2010-05-30  Miloslav Trmač  <mitr@redhat.com>

	* userinfo.c (on_ok_clicked)
	* usermount.c (response_callback): Use gtk_widget_is_toplevel () instead
	of deprecated GTK_WIDGET_TOPLEVEL ().

2010-04-08  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.105.
	* NEWS: Update.

	* userhelper.h
	* userhelper.c
	* userhelper-wrap.c: Remove #ifdef USE_STARTUP_NOTIFICATION where
	the clutter is not worth it.
	* userhelper.c (converse_pipe, wrap)
	* userhelper-wrap.c (userhelper_handle_childout): Remove #ifdef
	USE_STARTUP_NOTIFICATION, adding some parsing and data movements.  The
	actual functionality is still controlled by the #ifdef.

	* userhelper.c (send_sn_info): Split from converse_pipe().
	(converse_pipe): Fix getting the value of UH_SN_ID.
	(pipe_conv_wait_for_sync): Handle incoming UH_SN_ID.  Add a debug
	message.
	(pipe_conv_exec_start, pipe_conv_exec_fail): Send startup notification
	information.

	* userhelper-wrap.c (userhelper_handle_childout): Clean up startup
	notification if we open another dialog.

	* consolehelper.c (main): Don't put garbage in DESKTOP_STARTUP_ID if it
	was unset.

2010-03-31  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.h (ERR_MAX_TRIES): New definition.
	* userhelper.c (fail_exit): Convert PAM_MAXTRIES into ERR_MAX_TRIES.
	* userhelper-wrap.c (userhelper_parse_exitstatus): Add error message for
	ERR_MAX_TRIES.
