@@ -9,7 +9,6 @@
 ^autom4te\.cache.*
 ^build.*$
 ^po/Makefile\.in\.in$
-^po/usermode.pot$
 ^INSTALL$
 ^Makefile\.in$
 ^aclocal\.m4$
