@@ -1,0 +1,8 @@
+[main]
+host = https://www.transifex.net
+
+[usermode.master]
+file_filter = po/<lang>.po
+source_file = po/usermode.pot
+source_lang = en
+
